--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.url.salle.eric.eugenio.eventme">
-
     <!-- Connection to internet for API -->
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -11,11 +10,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:usesCleartextTraffic="true"
         android:theme="@style/EventmeTheme">
-        <activity android:name=".NewEventActivity">
-
-        </activity>
+        <activity android:name=".SplashActivity" />
+        <activity android:name=".NewEventActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
