--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/EventmeTheme">
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".EventActivity"></activity>
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".LoginActivity" />
         <activity
-            android:name=".IndividualChatActivity"
+            android:name=".ChatActivity"
             android:screenOrientation="portrait"
             tools:ignore="LockedOrientationActivity" />
         <activity
