--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,13 +8,13 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_eventme"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:screenOrientation="portrait"
         android:supportsRtl="true"
         android:theme="@style/EventmeTheme"
         android:usesCleartextTraffic="true"
+        android:windowSoftInputMode="stateAlwaysHidden|adjustNothing"
         tools:ignore="LockedOrientationActivity">
         <activity android:name=".EditProfileActivity" />
         <activity android:name=".StoriesActivity" />
